--- a/README.org
+++ b/README.org
@@ -4,6 +4,8 @@
 
 
 
+keywords: [[https://srfi.schemers.org/?keywords=modules][Modules]], [[https://srfi.schemers.org/?keywords=r6rs-process][R6RS process]]
+
 This repository hosts [[https://srfi.schemers.org/srfi-83/][SRFI 83]]: R6RS Library Syntax, a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
 
 This SRFI is in /withdrawn/ status.
